@@ -1,3 +1,8 @@
+CVS-20100330
++ vektor -> vector
++ first preparations for ADP potentials
++ fix seed option, it actually never worked
+
 CVS-20100312
 + fix simann for tabulated potentials
 
